# Hypercool

./: .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  build_log.txt  build_log_utf8.txt  calendar-widget.html  class-btn.html  download-panel.html  gif-btn.html  gif-widget.html  index.html  latest.json  message-viewer.html  package-lock.json  package.json  release_method.md  school-widget.html  search-modal.html  vite.config.ts
.claude/: settings.local.json
docs/: download_helper_import.md  release_method.md
scripts/: check_class_event_split.py  check_grade_event_split.py  deduplicate_events.py  diagnose_calendar.py  find_event_labels.py  inspect_udb.py  release_method.py  test_all.ps1  verify_appin_parser.py
src/: App.css  App.tsx  CalendarWidget.css  SchoolWidget.css  SearchModal.css  calendar-widget.tsx  class-btn.css  class-btn.tsx  download-panel.tsx  firebase.ts  gif-btn.css  gif-btn.tsx  gif-widget.css  gif-widget.tsx  main.tsx  school-widget.tsx  search-modal.tsx  styles.css  types.ts
src-firebase-app/: .firebaserc  FIREBASE_DEPLOY.md  index.html  package-lock.json  package.json
src-firebase-app/.firebase/: hosting.cHVibGlj.cache
src-firebase-app/public/: index.html
src-firebase-app/src/: App.css  App.tsx  firebase.ts  index.css  types.ts
src-tauri/: 2  Cargo.toml  hypercool.key  hypercool.key.pub  hypercool.plain.key  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: briefing_prompt.md
src-tauri/src/: agent.rs  appin_parser.rs  db.rs  download_watcher.rs  dummy_window.rs  edufine_db.rs  edufine_watcher.rs  gif_clipboard.rs  gif_watcher.rs  lib.rs  main.rs  mcp_server.rs  models.rs  school_data.rs  search_db.rs  tenor.rs  timetable_parser.rs  utils.rs  wallpaper.rs  window_blur.rs
src-tauri/src/commands/: mcp.rs  messages.rs  mod.rs  system.rs  window.rs
src/auth/: AuthService.ts
src/components/: AddTodoModal.tsx  AttachmentList.tsx  AuthLanding.tsx  ClassifierPage.tsx  HelpPage.css  HelpPage.tsx  HistoryPage.tsx  McpPage.css  McpPage.tsx  PageHeader.tsx  ResizeHandles.tsx  ScheduleModal.tsx  SettingsPage.tsx  Sidebar.tsx  TodosPage.tsx  UdbPickerModal.tsx  UpdateNotificationModal.tsx  icons.tsx
src/download-panel/: DownloadPanel.css  DownloadPanel.tsx  FileItem.tsx  extStyle.ts  types.ts
src/hooks/: useDeepLink.ts  useGlobalEvents.ts  useMessages.ts  useSchedules.ts  useSettings.ts  useSync.ts  useUpdateChecker.ts  useWindowControls.ts
src/school-widget/: TabBar.tsx  types.ts
src/services/: ScheduleService.ts
src/sync/: MigrationService.ts  SyncService.test.ts  SyncService.ts
src/types/: schedule.ts
src/utils/: dateUtils.test.ts  (+2 more)
test_python/: main.py
(+54 files in other folders)
