[package]
name = "hypercool"
version = "0.1.0"
description = "메시지 포스트잇 관리 앱"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
# system tray for v2 (tauri has built-in tray in core v2)
notify = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
lru = "0.12.3"
brotli = "3.4"
winreg = "0.52"
base64 = "0.22"
flate2 = { version = "1.0", features = ["zlib"] }
window-vibrancy = "0.5"
image = "0.25"
chrono = "0.4"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

    

