[package]
name = "hypercool"
version = "0.2.1"
description = "쿨 메신저 메시지 관리 프로그램"
authors = ["moominda"]
license = ""
repository = "banatic/hypercool"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
# system tray for v2 (tauri has built-in tray in core v2)
notify = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
lru = "0.12.3"
brotli = "3.4"
winreg = "0.52"
base64 = "0.22"
flate2 = { version = "1.0", features = ["zlib"] }
window-vibrancy = "0.5"
image = "0.25"
chrono = "0.4"
single-instance = "0.3"
winapi = { version = "0.3", features = ["winuser"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"] }
zip = "6.0.0"
encoding_rs = "0.8.35"
reqwest = { version = "0.12.24", features = ["blocking", "cookies", "json"] }
scraper = "0.24.0"
regex = "1.12.2"
tokio = { version = "1.48.0", features = ["full"] }
cookie_store = "0.22.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

    

